--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <a class="navbar-brand h-75">
                         <img class="d-none d-md-none d-sm-none d-lg-inline-block w-100 h-100" src="./img/logo.svg" alt="logo">
                     </a>
-                    <form class="d-flex flex-grow-1" role="search">
+                    <form class="d-flex flex-grow-1 bg-search border px-2 rounded" role="search">
+                        <i class="fa-solid fa-magnifying-glass fs-5 py-2"></i>
                         <input class="form-control bg-search" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
                     </form>
                     <div class="d-none d-md-none d-sm-none d-lg-inline-block fs-5 ps-3">
@@ -58,19 +59,19 @@
                 <div class="row">
 
                   <div class="d-flex flex-column py-3 col-auto col-lg-auto left text-white fs-5 px-3">
-                    <div class="d-flex justify-content-center align-items-center gap-4">
+                    <div class="d-flex justify-content-center align-items-center gap-4 aside-item">
                         <i class="fa-sharp fa-solid fa-house"></i>
                         <span class="d-none d-lg-inline-block">Home</span>
                     </div>
-                    <div class="d-flex justify-content-center align-items-center gap-4 py-3">
+                    <div class="d-flex justify-content-center align-items-center gap-4 py-3 aside-item">
                         <i class="fa-solid fa-chart-simple"></i>
                         <span class="d-none d-lg-inline-block">Stats</span>
                     </div>
-                    <div class="d-flex justify-content-center align-items-center gap-4">
+                    <div class="d-flex justify-content-center align-items-center gap-4 aside-item">
                         <i class="fa-solid fa-signal"></i>
                         <span class="d-none d-lg-inline-block">Signals</span>
                     </div>
-                    <div class="mt-auto d-flex justify-content-center align-items-center gap-4">
+                    <div class="mt-auto d-flex justify-content-center align-items-center gap-4 aside-item">
                         <i class="fa-sharp fa-solid fa-gear"></i>
                         <span class="d-none d-lg-inline-block">Admin</span>
                     </div>
@@ -79,13 +80,13 @@
                   <div class="container-fluid col col-lg p-0 main-right">
 
                     <div class="container-fluid right text-white lh-lg text-start">
-                        <div class="row fs-6">
+                        <div class="row fs-5">
 
                             <div class="col-12 order-2 py-2 col-lg-6 order-lg-1">
                                 <div>
                                     <span class="fs-2">Boolean</span>
                                     <span class="buttons btn-main">Piano blaze</span>
-                                    <div>
+                                    <div class="fs-6">
                                         <span class="buttons btn-main">3 app</span>
                                         <i class="fa-solid fa-angles-right"></i>
                                         <span class="d-none buttons btn-main d-lg-inline-block">Boolean mobile app</span>
@@ -105,7 +106,96 @@
 
                             <div class="col-12 order-1 col-lg-2 order-lg-3">
                                 <span class="align-middle">Nuovo Studente</span>
-                                <span class="fs-1 align-middle px-3"><i class="fa-regular fa-square-plus"></i></span>
+                                <button class="fs-2 align-middle px-3 btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                                    <i class="fa-regular fa-square-plus"></i> 
+                                </button>
+                                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                                    <div class="offcanvas-header">
+                                      <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body text-black">
+                                        <form class="row g-3 needs-validation" novalidate>
+                                            <div class="fs-4 fw-bold">Inserisci un nuovo studente</div>
+                                            <div class="col-md-6 position-relative">
+                                              <label for="validationTooltip01" class="form-label">Nome</label>
+                                              <input type="text" class="form-control" id="validationTooltip01" value="Mark" required>
+                                              <div class="valid-tooltip">
+                                                Looks good!
+                                              </div>
+                                            </div>
+                                            <div class="col-md-6 position-relative">
+                                              <label for="validationTooltip02" class="form-label">Cognome</label>
+                                              <input type="text" class="form-control" id="validationTooltip02" value="Otto" required>
+                                              <div class="valid-tooltip">
+                                                Looks good!
+                                              </div>
+                                            </div>
+                                            <div class="col-md-6 position-relative">
+                                              <label for="validationTooltipUsername" class="form-label">Email</label>
+                                              <div class="input-group has-validation">
+                                                <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
+                                                <input type="email" class="form-control" id="validationTooltipUsername" aria-describedby="validationTooltipUsernamePrepend" required>
+                                                <div class="invalid-tooltip">
+                                                  Please choose a unique and valid username.
+                                                </div>
+                                              </div>
+                                            </div>
+                                            <div class="col-md-6 position-relative">
+                                              <label for="validationTooltip03" class="form-label">Password</label>
+                                              <input type="password" class="form-control" id="validationTooltip03" required>
+                                              <div class="invalid-tooltip">
+                                                Please provide a valid city.
+                                              </div>
+                                            </div>
+                                            <div class="col-md-12 position-relative">
+                                              <label for="validationTooltip03" class="form-label">Indirizzo</label>
+                                              <input type="password" class="form-control" id="validationTooltip03" required>
+                                              <div class="invalid-tooltip">
+                                                Please provide a valid city.
+                                              </div>
+                                            </div>
+                                            <div class="col-md-6 position-relative">
+                                              <label for="validationTooltip03" class="form-label">Città</label>
+                                              <input type="password" class="form-control" id="validationTooltip03" required>
+                                              <div class="invalid-tooltip">
+                                                Please provide a valid city.
+                                              </div>
+                                            </div>
+                                            <div class="col-md-4 position-relative">
+                                              <label for="validationTooltip04" class="form-label">Stato</label>
+                                              <select class="form-select" id="validationTooltip04" required>
+                                                <option selected disabled value="">Scegli..</option>
+                                                <option>...</option>
+                                              </select>
+                                              <div class="invalid-tooltip">
+                                                Please select a valid state.
+                                              </div>
+                                            </div>
+                                            <div class="col-md-2 position-relative">
+                                              <label for="validationTooltip05" class="form-label">CAP</label>
+                                              <input type="text" class="form-control" id="validationTooltip05" required>
+                                              <div class="invalid-tooltip">
+                                                Please provide a valid zip.
+                                              </div>
+                                            </div>
+                                            <div class="mb-12">
+                                                <input class="form-control" type="file" id="formFileMultiple" multiple>
+                                            </div>
+                                            <div class="col-md-12 position-relative">
+                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                <label class="form-check-label" for="flexCheckDefault">
+                                                  Seleziona per proseguire
+                                                </label>
+                                            </div>
+                                        
+                                            <div class="col-12">
+                                              <button class="btn btn-primary" type="submit">Salva</button>
+                                              <button class="btn btn-warning" type="submit">Svuota</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                  </div>
                             </div>
 
                             
@@ -132,7 +222,7 @@
                                         </tr>
                                         </thead>
                                         <tbody class="border rounded-bottom text-start align-middle">
-                                          <tr>
+                                          <tr class="aside-item">
                                             <th scope="row">
                                                 <div class="table-h">
                                                     <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
@@ -149,7 +239,7 @@
                                                 <i class="fa-solid fa-trash icon"></i>
                                             </td>
                                           </tr>
-                                          <tr>
+                                          <tr class="aside-item">
                                             <th scope="row">
                                                 <div class="table-h">
                                                     <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
@@ -166,7 +256,7 @@
                                                 <i class="fa-solid fa-trash icon"></i>
                                             </td>
                                           </tr>
-                                          <tr>
+                                          <tr class="aside-item">
                                             <th scope="row">
                                                 <div class="table-h">
                                                     <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
@@ -183,7 +273,7 @@
                                                 <i class="fa-solid fa-trash icon"></i>
                                             </td>
                                           </tr>
-                                          <tr>
+                                          <tr class="aside-item">
                                             <th scope="row">
                                                 <div class="table-h">
                                                     <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
@@ -200,7 +290,7 @@
                                                 <i class="fa-solid fa-trash icon"></i>
                                             </td>
                                           </tr>
-                                          <tr>
+                                          <tr class="aside-item">
                                             <th scope="row">
                                                 <div class="table-h">
                                                     <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
@@ -217,7 +307,7 @@
                                                 <i class="fa-solid fa-trash icon"></i>
                                             </td>
                                           </tr>
-                                          <tr>
+                                          <tr class="aside-item">
                                             <th scope="row">
                                                 <div class="table-h">
                                                     <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
@@ -234,7 +324,7 @@
                                                 <i class="fa-solid fa-trash icon"></i>
                                             </td>
                                           </tr>
-                                          <tr>
+                                          <tr class="aside-item">
                                             <th scope="row">
                                                 <div class="table-h">
                                                     <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
@@ -251,7 +341,7 @@
                                                 <i class="fa-solid fa-trash icon"></i>
                                             </td>
                                           </tr>
-                                          <tr>
+                                          <tr class="aside-item">
                                             <th scope="row">
                                                 <div class="table-h">
                                                     <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
@@ -274,14 +364,14 @@
                                   <div class="accordion py-3" id="accordionExample">
                                     <div class="accordion-item">
                                       <div class="text-dark fs-2 border rounded bg-light px-3 text-start">F.A.Q.</div>
-                                      <h2 class="accordion-header" id="headingOne">
-                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                          Come aggiungere un nuovo studente?
+                                      <h2 class="accordion-header" id="headingTwo">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                          Come posso accedere alle informazioni del mio account?
                                         </button>
                                       </h2>
-                                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                                         </div>
                                       </div>
                                     </div>
