--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <div class="fs-1">125</div>
                             </div>
 
-                            <div class="col-12 order-1 col-lg-2 order-lg-3">
+                            <div class="col-12 order-1 col-lg-2 order-lg-3 py-2">
                                 <span class="align-middle">Nuovo Studente</span>
                                 <button class="fs-2 align-middle px-3 btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                                     <i class="fa-regular fa-square-plus"></i> 
@@ -119,14 +119,14 @@
                                             <div class="fs-4 fw-bold">Inserisci un nuovo studente</div>
                                             <div class="col-md-6 position-relative">
                                               <label for="validationTooltip01" class="form-label">Nome</label>
-                                              <input type="text" class="form-control" id="validationTooltip01" value="Mark" required>
+                                              <input type="text" class="form-control" id="validationTooltip01" placeholder="Mario" value="" required>
                                               <div class="valid-tooltip">
                                                 Looks good!
                                               </div>
                                             </div>
                                             <div class="col-md-6 position-relative">
                                               <label for="validationTooltip02" class="form-label">Cognome</label>
-                                              <input type="text" class="form-control" id="validationTooltip02" value="Otto" required>
+                                              <input type="text" class="form-control" id="validationTooltip02" placeholder="Rossi" value="" required>
                                               <div class="valid-tooltip">
                                                 Looks good!
                                               </div>
@@ -215,8 +215,8 @@
                                         <thead>
                                           <tr class="text-start">
                                             <th scope="col">Nome</th>
-                                            <th class="d-none d-md-inline-block d-lg-inline-block " scope="col">Data Inizio</th>
-                                            <th class="d-none d-md-inline-block d-lg-inline-block " scope="col">Roi</th>
+                                            <th class="d-none d-md-table-cell d-lg-table-cell" scope="col">Data Inizio</th>
+                                            <th class="d-none d-md-table-cell d-lg-table-cell" scope="col">Roi</th>
                                             <th scope="col">Stato</th>
                                             <th scope="col">Azioni</th>
                                         </tr>
@@ -229,8 +229,8 @@
                                                     <span class="pe-5">Classe 75</span>
                                                 </div>
                                             </th>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >15 Feb 2021</td>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20%</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >15 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20%</td>
                                             <td>
                                                 <span class="buttons btn-done">Done</span>
                                             </td>
@@ -246,8 +246,8 @@
                                                     <span class="pe-5">Classe 76</span>
                                                 </div>
                                             </th>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >16 Feb 2021</td>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20%</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >16 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20%</td>
                                             <td>
                                                 <span class="buttons btn-done">Done</span>
                                             </td>
@@ -263,8 +263,8 @@
                                                     <span class="pe-5">Classe 77</span>
                                                 </div>
                                             </th>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >17 Feb 2021</td>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20%</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >17 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20%</td>
                                             <td>
                                                 <span class="buttons btn-process">Process</span>
                                             </td>
@@ -280,8 +280,8 @@
                                                     <span class="pe-5">Classe 78</span>
                                                 </div>
                                             </th>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >18 Feb 2021</td>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20%</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >18 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20%</td>
                                             <td>
                                                 <span class="buttons btn-done">Done</span>
                                             </td>
@@ -297,8 +297,8 @@
                                                     <span class="pe-5">Classe 79</span>
                                                 </div>
                                             </th>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >19 Feb 2021</td>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20%</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >19 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20%</td>
                                             <td>
                                                 <span class="buttons btn-fail">Failed</span>
                                             </td>
@@ -314,8 +314,8 @@
                                                     <span class="pe-5">Classe 80</span>
                                                 </div>
                                             </th>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20 Feb 2021</td>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20%</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20%</td>
                                             <td>
                                                 <span class="buttons btn-done">Done</span>
                                             </td>
@@ -331,8 +331,8 @@
                                                     <span class="pe-5">Classe 81</span>
                                                 </div>
                                             </th>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >21 Feb 2021</td>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20%</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >21 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20%</td>
                                             <td>
                                                 <span class="buttons btn-fail">Failed</span>
                                             </td>
@@ -348,8 +348,8 @@
                                                     <span class="pe-5">Classe 82</span>
                                                 </div>
                                             </th>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >22 Feb 2021</td>
-                                            <td class="d-none d-md-inline-block d-lg-inline-block " >20%</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >22 Feb 2021</td>
+                                            <td class="d-none d-md-table-cell d-lg-table-cell" >20%</td>
                                             <td>
                                                 <span class="buttons btn-done">Done</span>
                                             </td>
@@ -363,7 +363,7 @@
                                   </div>
                                   <div class="accordion py-3" id="accordionExample">
                                     <div class="accordion-item">
-                                      <div class="text-dark fs-2 border rounded bg-light px-3 text-start">F.A.Q.</div>
+                                      <div class="text-dark fs-2 border rounded-top bg-light px-3 text-start">F.A.Q.</div>
                                       <h2 class="accordion-header" id="headingTwo">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                           Come posso accedere alle informazioni del mio account?
