--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="container-fluid right text-white lh-lg text-start">
                         <div class="row fs-5">
 
-                            <div class="col-12 order-2 py-2 col-lg-6 order-lg-1">
+                            <div class="col-12 order-2 py-2 col-lg-6 order-lg-1 ps-4">
                                 <div>
                                     <span class="fs-2">Boolean</span>
                                     <span class="buttons btn-main">Piano blaze</span>
@@ -106,8 +106,8 @@
 
                             <div class="col-12 order-1 col-lg-2 order-lg-3 py-2">
                                 <span class="align-middle">Nuovo Studente</span>
-                                <button class="fs-2 align-middle px-3 btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-                                    <i class="fa-regular fa-square-plus"></i> 
+                                <button class="fs-1 align-middle px-3 btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                                    <i class="fa-regular fa-square-plus fs-1"></i> 
                                 </button>
                                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                                     <div class="offcanvas-header">
@@ -223,10 +223,10 @@
                                         </thead>
                                         <tbody class="border rounded-bottom text-start align-middle">
                                           <tr class="aside-item">
-                                            <th scope="row">
-                                                <div class="table-h">
-                                                    <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
-                                                    <span class="pe-5">Classe 75</span>
+                                            <th scope="row" class="w-50">
+                                                <div class="table-h d-flex align-items-center flex-wrap">
+                                                    <img class="w-auto h-50" src="./img/class-avatar.jpg" alt="avatar">
+                                                    <div class="d-block ps-sm-3 ps-md-3 ps-lg-3">Classe 75</div>
                                                 </div>
                                             </th>
                                             <td class="d-none d-md-table-cell d-lg-table-cell" >15 Feb 2021</td>
@@ -241,9 +241,9 @@
                                           </tr>
                                           <tr class="aside-item">
                                             <th scope="row">
-                                                <div class="table-h">
-                                                    <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
-                                                    <span class="pe-5">Classe 76</span>
+                                                <div class="table-h d-flex align-items-center flex-wrap">
+                                                    <img class="w-auto h-50" src="./img/class-avatar.jpg" alt="avatar">
+                                                    <div class="d-block ps-sm-3 ps-md-3 ps-lg-3">Classe 76</div>
                                                 </div>
                                             </th>
                                             <td class="d-none d-md-table-cell d-lg-table-cell" >16 Feb 2021</td>
@@ -258,9 +258,9 @@
                                           </tr>
                                           <tr class="aside-item">
                                             <th scope="row">
-                                                <div class="table-h">
-                                                    <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
-                                                    <span class="pe-5">Classe 77</span>
+                                                <div class="table-h d-flex align-items-center flex-wrap">
+                                                    <img class="w-auto h-50" src="./img/class-avatar.jpg" alt="avatar">
+                                                    <div class="d-block ps-sm-3 ps-md-3 ps-lg-3">Classe 77</div>
                                                 </div>
                                             </th>
                                             <td class="d-none d-md-table-cell d-lg-table-cell" >17 Feb 2021</td>
@@ -275,9 +275,9 @@
                                           </tr>
                                           <tr class="aside-item">
                                             <th scope="row">
-                                                <div class="table-h">
-                                                    <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
-                                                    <span class="pe-5">Classe 78</span>
+                                                <div class="table-h d-flex align-items-center flex-wrap">
+                                                    <img class="w-auto h-50" src="./img/class-avatar.jpg" alt="avatar">
+                                                    <div class="d-block ps-sm-3 ps-md-3 ps-lg-3">Classe 78</div>
                                                 </div>
                                             </th>
                                             <td class="d-none d-md-table-cell d-lg-table-cell" >18 Feb 2021</td>
@@ -292,9 +292,9 @@
                                           </tr>
                                           <tr class="aside-item">
                                             <th scope="row">
-                                                <div class="table-h">
-                                                    <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
-                                                    <span class="pe-5">Classe 79</span>
+                                                <div class="table-h d-flex align-items-center flex-wrap">
+                                                    <img class="w-auto h-50" src="./img/class-avatar.jpg" alt="avatar">
+                                                    <div class="d-block ps-sm-3 ps-md-3 ps-lg-3">Classe 79</div>
                                                 </div>
                                             </th>
                                             <td class="d-none d-md-table-cell d-lg-table-cell" >19 Feb 2021</td>
@@ -309,9 +309,9 @@
                                           </tr>
                                           <tr class="aside-item">
                                             <th scope="row">
-                                                <div class="table-h">
-                                                    <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
-                                                    <span class="pe-5">Classe 80</span>
+                                                <div class="table-h d-flex align-items-center flex-wrap">
+                                                    <img class="w-auto h-50" src="./img/class-avatar.jpg" alt="avatar">
+                                                    <div class="d-block ps-sm-3 ps-md-3 ps-lg-3">Classe 80</div>
                                                 </div>
                                             </th>
                                             <td class="d-none d-md-table-cell d-lg-table-cell" >20 Feb 2021</td>
@@ -326,9 +326,9 @@
                                           </tr>
                                           <tr class="aside-item">
                                             <th scope="row">
-                                                <div class="table-h">
-                                                    <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
-                                                    <span class="pe-5">Classe 81</span>
+                                                <div class="table-h d-flex align-items-center flex-wrap">
+                                                    <img class="w-auto h-50" src="./img/class-avatar.jpg" alt="avatar">
+                                                    <div class="d-block ps-sm-3 ps-md-3 ps-lg-3">Classe 81</div>
                                                 </div>
                                             </th>
                                             <td class="d-none d-md-table-cell d-lg-table-cell" >21 Feb 2021</td>
@@ -343,9 +343,9 @@
                                           </tr>
                                           <tr class="aside-item">
                                             <th scope="row">
-                                                <div class="table-h">
-                                                    <img class="w-auto h-100" src="./img/class-avatar.jpg" alt="avatar">
-                                                    <span class="pe-5">Classe 82</span>
+                                                <div class="table-h d-flex align-items-center flex-wrap">
+                                                    <img class="w-auto h-50" src="./img/class-avatar.jpg" alt="avatar">
+                                                    <div class="d-block ps-sm-3 ps-md-3 ps-lg-3">Classe 82</div>
                                                 </div>
                                             </th>
                                             <td class="d-none d-md-table-cell d-lg-table-cell" >22 Feb 2021</td>
