--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <header>
 
             <nav class="navbar bg-white">
-                <div class="container-fluid align-content-center h-100">
+                <div class="container-fluid justify-content-around align-content-center h-100">
                     <a class="navbar-brand">
                         <img class="d-lg-none w-100 h-100" src="./img/mobile-logo.png" alt="logo">
                     </a>
-                    <a class="navbar-brand h-75">
+                    <a class="d-none d-md-none d-sm-none d-lg-inline-block navbar-brand h-75">
                         <img class="d-none d-md-none d-sm-none d-lg-inline-block w-100 h-100" src="./img/logo.svg" alt="logo">
                     </a>
-                    <form class="d-flex flex-grow-1 bg-search border px-2 rounded" role="search">
+                    <form class="d-flex flex-grow-1 bg-search border px-2 rounded " role="search">
                         <i class="fa-solid fa-magnifying-glass fs-5 py-2"></i>
                         <input class="form-control bg-search" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
                     </form>
